// Copyright (C) 2023 Quickwit, Inc.
//
// Quickwit is offered under the AGPL v3.0 and as commercial software.
// For commercial licensing, contact us at hello@quickwit.io.
//
// AGPL:
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program. If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package control_plane_service;

service ControlPlaneService {
  /// Notify the Control Plane that a change on an index occurred. The change
  /// can be an index creation, deletion, or update that includes a source creation/deletion/num pipeline update.
  // Note(fmassot): it's not very clear for a user to know which change triggers a control plane notification.
  // This can be explicited in the attributes of `NotifyIndexChangeRequest` with an enum that describes the
  // type of change. The index ID and/or source ID could also be added.
  // However, these attributes will not be used by the Control Plane, at least at short term.
  rpc notifyIndexChange(NotifyIndexChangeRequest) returns (NotifyIndexChangeResponse);
}

message NotifyIndexChangeRequest {}

message NotifyIndexChangeResponse {}
